Settings People Revamp: Update Manage Profile to conform with new mocks.
Mostly CSS changes, but also moved to using iron-selector to simplify the JavaScript logic.

BUG=563721

Review URL: https://codereview.chromium.org/1862223002

Cr-Commit-Position: refs/heads/master@{#385625}

--- a/chrome/browser/resources/settings/people_page/manage_profile.html
+++ b/chrome/browser/resources/settings/people_page/manage_profile.html
@@ -1,26 +1,62 @@
 <link rel="import" href="chrome://resources/html/polymer.html">
 <link rel="import" href="chrome://resources/html/web_ui_listener_behavior.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/iron-selector/iron-selector.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-button/paper-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-input/paper-input.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/paper-styles/shadow.html">
 <link rel="import" href="chrome://md-settings/people_page/manage_profile_browser_proxy.html">
 <link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
 <dom-module id="settings-manage-profile">
-  <link rel="import" type="css" href="manage_profile.css">
   <template>
-    <style include="settings-shared"></style>
+    <style include="settings-shared">
+      #availableIcons {
+        -webkit-margin-start: 16px;
+        margin-top: 16px;
+        max-width: 600px;
+      }
+
+      #selector {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      /* Special style for Manage Profile icon grid buttons only. */
+      paper-button {
+        align-items: center;
+        background-color: var(--paper-grey-300);
+        border: 1px solid var(--paper-grey-300);
+        border-radius: 4px;
+        display: flex;
+        height: 48px;
+        justify-content: center;
+        margin: 8px;
+        padding: 0;
+        width: 48px;
+      }
+
+      paper-button:hover {
+        @apply(--shadow-elevation-2dp);
+      }
+
+      paper-button.iron-selected {
+        border: 1px solid var(--google-blue-500);
+      }
+    </style>
     <div class="settings-box first">
       <paper-input value="{{profileName}}" pattern=".*\S.*" auto-validate
           required on-change="onProfileNameChanged_">
       </paper-input>
-      <div id="availableIcons">
+    </div>
+    <div id="availableIcons">
+      <iron-selector id="selector" on-iron-activate="onIconActivate_"
+          selected="[[profileIconUrl]]" attr-for-selected="data-icon-url">
         <template is="dom-repeat" items="[[availableIconUrls]]">
-          <paper-button toggles active="{{isActiveIcon_(item, profileIconUrl)}}"
-              on-tap="onIconTap_" data-icon-url$="[[item]]">
+          <paper-button data-icon-url$="[[item]]">
             <img src="[[item]]">
           </paper-button>
         </template>
-      </div>
+      </iron-selector>
     </div>
   </template>
   <script src="manage_profile.js"></script>
