Fix overlap between the clear button and the last character when search query is long.
BUG=498573
TEST=manually,
out/Release/browser_tests --gtest_filter=*FileManager*

Review URL: https://codereview.chromium.org/1864003002

Cr-Commit-Position: refs/heads/master@{#385667}

--- a/ui/file_manager/file_manager/main.html
+++ b/ui/file_manager/file_manager/main.html
@@ -262,7 +262,7 @@
         <paper-input-container no-label-float>
           <input is="iron-input" type="search" tabindex="13"
                  i18n-values="aria-label:SEARCH_TEXT_LABEL;placeholder:SEARCH_TEXT_LABEL">
-          <span class="clear"></span>
+          <span class="clear" suffix></span>
         </paper-input-container>
       </div>
       <button id="refresh-button" class="icon-button" tabindex="14" hidden
