--- a/chrome/browser/resources/md_user_manager/user_manager.html
+++ b/chrome/browser/resources/md_user_manager/user_manager.html
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div id="bubble" class="bubble faded" hidden></div>
-    <control-bar></control-bar>
+    <control-bar id="login-header-bar"></control-bar>
     <include src="../../../../ui/login/account_picker/user_pod_template.html">
   </user-manager-pages>
   <link rel="import" href="chrome://md-user-manager/strings.html">
