--- a/chrome/browser/resources/md_user_manager/control_bar.html
+++ b/chrome/browser/resources/md_user_manager/control_bar.html
@@ -1,8 +1,8 @@
 <link rel="import" href="chrome://md-user-manager/profile_browser_proxy.html">
 <link rel="import" href="chrome://md-user-manager/shared_styles.html">
+<link rel="import" href="chrome://resources/html/polymer.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-button/paper-button.html">
-<link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 
 <dom-module id="control-bar">
   <!-- TODO(mahmadi): this format is deprecated. Change to the new
@@ -10,15 +10,12 @@
   <link rel="import" type="css" href="chrome://md-user-manager/control_bar.css">
   <template>
     <style include="shared-styles"></style>
-    <div id="login-header-bar"
-        class="login-header-bar layout horizontal end-justified">
+    <div id="container" class="layout horizontal end-justified">
       <div id="logo"></div>
       <paper-button id="launchGuest" on-tap="onLaunchGuestTap_"
           i18n-content="browseAsGuest" hidden="[[!showGuest]]"></paper-button>
-      <div id="add-user-header-bar-item">
-        <paper-button id="addUser" on-tap="onAddUserTap_"
-            i18n-content="addUser" hidden="[[!showAddPerson]]"></paper-button>
-      </div>
+      <paper-button id="addUser" on-tap="onAddUserTap_"
+          i18n-content="addUser" hidden="[[!showAddPerson]]"></paper-button>
     </div>
   </template>
   <script src="chrome://md-user-manager/control_bar.js"></script>
