--- a/chrome/browser/resources/md_user_manager/user_manager_styles.html
+++ b/chrome/browser/resources/md_user_manager/user_manager_styles.html
@@ -8,6 +8,12 @@
       }
 
       /* Overrides for the desktop user manager screen. */
+      #login-header-bar {
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+      }
 
       #outer-container {
         min-height: 0;
