Show Alt-Backspace in context menu.
BUG=224828
TEST=manually.

Review URL: https://codereview.chromium.org/1867033002

Cr-Commit-Position: refs/heads/master@{#386035}

--- a/ui/file_manager/file_manager/main.html
+++ b/ui/file_manager/file_manager/main.html
@@ -45,7 +45,7 @@
                i18n-values="label:PASTE_INTO_FOLDER_BUTTON_LABEL">
       <command id="rename" i18n-values="label:RENAME_BUTTON_LABEL"
                shortcut="Enter-Ctrl">
-      <command id="delete" shortcut="U+007F">
+      <command id="delete" shortcut="U+0008-Alt U+007F">
       <command id="refresh" i18n-values="label:REFRESH_BUTTON_LABEL"
                shortcut="U+0042-Ctrl" hidden>
       <command id="create-folder-shortcut"
